src/parser/grammar/Yappu/VenbaParser.py
# Generated from grammar/Yappu/Venba.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class VenbaParser ( Parser ):

    grammarFileName = "Venba.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'\\u0B85'", "'\\u0B86'", 
                     "'\\u0B87'", "'\\u0B88'", "'\\u0B89'", "'\\u0B8A'", 
                     "'\\u0B8E'", "'\\u0B8F'", "'\\u0B90'", "'\\u0B92'", 
                     "'\\u0B93'", "'\\u0B94'", "'\\u0B83'", "'\\u0BCD'", 
                     "'\\u0BBE'", "'\\u0BBF'", "'\\u0BC0'", "'\\u0BC1'", 
                     "'\\u0BC2'", "'\\u0BC6'", "'\\u0BC7'", "'\\u0BC8'", 
                     "'\\u0BCA'", "'\\u0BCB'", "'\\u0BCC'" ]

    symbolicNames = [ "<INVALID>", "MEI", "UYIR_MEI_OU", "UYIR_MEI_OA", 
                      "UYIR_MEI_O", "UYIR_MEI_AI", "UYIR_MEI_AE", "UYIR_MEI_E", 
                      "UYIR_MEI_OO", "UYIR_MEI_U", "UYIR_MEI_EE", "UYIR_MEI_I", 
                      "UYIR_MEI_AA", "UYIR_MEI_A", "A_UYIR", "AA_UYIR", 
                      "I_UYIR", "EE_UYIR", "U_UYIR", "OO_UYIR", "E_UYIR", 
                      "AE_UYIR", "AI_UYIR", "O_UYIR", "OA_UYIR", "OU_UYIR", 
                      "AAYTHAM", "PULLI", "KAAL", "SULI", "NEDIL_SULI", 
                      "U_KURIL", "U_NEDIL", "EA_KURIL", "EA_NEDIL", "I", 
                      "O_KURIL", "O_NEDIL", "OU", "NEWLINE", "WS" ]

    RULE_venba = 0
    RULE_adi = 1
    RULE_eetradi = 2
    RULE_seer = 3
    RULE_moovasai = 4
    RULE_eerasai = 5
    RULE_themangai = 6
    RULE_themangani = 7
    RULE_pulimangai = 8
    RULE_pulimangani = 9
    RULE_koovilangai = 10
    RULE_koovilangani = 11
    RULE_karuvilangai = 12
    RULE_karuvilangani = 13
    RULE_thema = 14
    RULE_pulima = 15
    RULE_koovilam = 16
    RULE_karuvilam = 17
    RULE_eetru_seer = 18
    RULE_nirai_asai = 19
    RULE_ner_asai = 20
    RULE_kuril = 21
    RULE_nedil = 22
    RULE_otru = 23

    ruleNames =  [ "venba", "adi", "eetradi", "seer", "moovasai", "eerasai", 
                   "themangai", "themangani", "pulimangai", "pulimangani", 
                   "koovilangai", "koovilangani", "karuvilangai", "karuvilangani", 
                   "thema", "pulima", "koovilam", "karuvilam", "eetru_seer", 
                   "nirai_asai", "ner_asai", "kuril", "nedil", "otru" ]

    EOF = Token.EOF
    MEI=1
    UYIR_MEI_OU=2
    UYIR_MEI_OA=3
    UYIR_MEI_O=4
    UYIR_MEI_AI=5
    UYIR_MEI_AE=6
    UYIR_MEI_E=7
    UYIR_MEI_OO=8
    UYIR_MEI_U=9
    UYIR_MEI_EE=10
    UYIR_MEI_I=11
    UYIR_MEI_AA=12
    UYIR_MEI_A=13
    A_UYIR=14
    AA_UYIR=15
    I_UYIR=16
    EE_UYIR=17
    U_UYIR=18
    OO_UYIR=19
    E_UYIR=20
    AE_UYIR=21
    AI_UYIR=22
    O_UYIR=23
    OA_UYIR=24
    OU_UYIR=25
    AAYTHAM=26
    PULLI=27
    KAAL=28
    SULI=29
    NEDIL_SULI=30
    U_KURIL=31
    U_NEDIL=32
    EA_KURIL=33
    EA_NEDIL=34
    I=35
    O_KURIL=36
    O_NEDIL=37
    OU=38
    NEWLINE=39
    WS=40

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class VenbaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def eetradi(self):
            return self.getTypedRuleContext(VenbaParser.EetradiContext,0)


        def adi(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VenbaParser.AdiContext)
            else:
                return self.getTypedRuleContext(VenbaParser.AdiContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(VenbaParser.NEWLINE)
            else:
                return self.getToken(VenbaParser.NEWLINE, i)

        def getRuleIndex(self):
            return VenbaParser.RULE_venba

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVenba" ):
                listener.enterVenba(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVenba" ):
                listener.exitVenba(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVenba" ):
                return visitor.visitVenba(self)
            else:
                return visitor.visitChildren(self)




    def venba(self):

        localctx = VenbaParser.VenbaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_venba)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 48
                    self.adi()
                    self.state = 49
                    self.match(VenbaParser.NEWLINE)

                else:
                    raise NoViableAltException(self)
                self.state = 53 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 55
            self.eetradi()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AdiContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def seer(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VenbaParser.SeerContext)
            else:
                return self.getTypedRuleContext(VenbaParser.SeerContext,i)


        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(VenbaParser.WS)
            else:
                return self.getToken(VenbaParser.WS, i)

        def getRuleIndex(self):
            return VenbaParser.RULE_adi

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAdi" ):
                listener.enterAdi(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAdi" ):
                listener.exitAdi(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAdi" ):
                return visitor.visitAdi(self)
            else:
                return visitor.visitChildren(self)




    def adi(self):

        localctx = VenbaParser.AdiContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_adi)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self.seer()
            self.state = 58
            self.match(VenbaParser.WS)
            self.state = 59
            self.seer()
            self.state = 60
            self.match(VenbaParser.WS)
            self.state = 61
            self.seer()
            self.state = 62
            self.match(VenbaParser.WS)
            self.state = 63
            self.seer()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EetradiContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def seer(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VenbaParser.SeerContext)
            else:
                return self.getTypedRuleContext(VenbaParser.SeerContext,i)


        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(VenbaParser.WS)
            else:
                return self.getToken(VenbaParser.WS, i)

        def eetru_seer(self):
            return self.getTypedRuleContext(VenbaParser.Eetru_seerContext,0)


        def getRuleIndex(self):
            return VenbaParser.RULE_eetradi

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEetradi" ):
                listener.enterEetradi(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEetradi" ):
                listener.exitEetradi(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEetradi" ):
                return visitor.visitEetradi(self)
            else:
                return visitor.visitChildren(self)




    def eetradi(self):

        localctx = VenbaParser.EetradiContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_eetradi)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.seer()
            self.state = 66
            self.match(VenbaParser.WS)
            self.state = 67
            self.seer()
            self.state = 68
            self.match(VenbaParser.WS)
            self.state = 69
            self.eetru_seer()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SeerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def eerasai(self):
            return self.getTypedRuleContext(VenbaParser.EerasaiContext,0)


        def moovasai(self):
            return self.getTypedRuleContext(VenbaParser.MoovasaiContext,0)


        def getRuleIndex(self):
            return VenbaParser.RULE_seer

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSeer" ):
                listener.enterSeer(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSeer" ):
                listener.exitSeer(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSeer" ):
                return visitor.visitSeer(self)
            else:
                return visitor.visitChildren(self)




    def seer(self):

        localctx = VenbaParser.SeerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_seer)
        try:
            self.state = 73
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 71
                self.eerasai()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 72
                self.moovasai()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MoovasaiContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def themangai(self):
            return self.getTypedRuleContext(VenbaParser.ThemangaiContext,0)


        def pulimangai(self):
            return self.getTypedRuleContext(VenbaParser.PulimangaiContext,0)


        def koovilangai(self):
            return self.getTypedRuleContext(VenbaParser.KoovilangaiContext,0)


        def karuvilangai(self):
            return self.getTypedRuleContext(VenbaParser.KaruvilangaiContext,0)


        def themangani(self):
            return self.getTypedRuleContext(VenbaParser.ThemanganiContext,0)


        def pulimangani(self):
            return self.getTypedRuleContext(VenbaParser.PulimanganiContext,0)


        def koovilangani(self):
            return self.getTypedRuleContext(VenbaParser.KoovilanganiContext,0)


        def karuvilangani(self):
            return self.getTypedRuleContext(VenbaParser.KaruvilanganiContext,0)


        def getRuleIndex(self):
            return VenbaParser.RULE_moovasai

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMoovasai" ):
                listener.enterMoovasai(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMoovasai" ):
                listener.exitMoovasai(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMoovasai" ):
                return visitor.visitMoovasai(self)
            else:
                return visitor.visitChildren(self)




    def moovasai(self):

        localctx = VenbaParser.MoovasaiContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_moovasai)
        try:
            self.state = 83
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 75
                self.themangai()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 76
                self.pulimangai()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 77
                self.koovilangai()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 78
                self.karuvilangai()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 79
                self.themangani()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 80
                self.pulimangani()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 81
                self.koovilangani()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 82
                self.karuvilangani()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EerasaiContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def karuvilam(self):
            return self.getTypedRuleContext(VenbaParser.KaruvilamContext,0)


        def pulima(self):
            return self.getTypedRuleContext(VenbaParser.PulimaContext,0)


        def koovilam(self):
            return self.getTypedRuleContext(VenbaParser.KoovilamContext,0)


        def thema(self):
            return self.getTypedRuleContext(VenbaParser.ThemaContext,0)


        def getRuleIndex(self):
            return VenbaParser.RULE_eerasai

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEerasai" ):
                listener.enterEerasai(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEerasai" ):
                listener.exitEerasai(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEerasai" ):
                return visitor.visitEerasai(self)
            else:
                return visitor.visitChildren(self)




    def eerasai(self):

        localctx = VenbaParser.EerasaiContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_eerasai)
        try:
            self.state = 89
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 85
                self.karuvilam()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 86
                self.pulima()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 87
                self.koovilam()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 88
                self.thema()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ThemangaiContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def thema(self):
            return self.getTypedRuleContext(VenbaParser.ThemaContext,0)


        def ner_asai(self):
            return self.getTypedRuleContext(VenbaParser.Ner_asaiContext,0)


        def getRuleIndex(self):
            return VenbaParser.RULE_themangai

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterThemangai" ):
                listener.enterThemangai(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitThemangai" ):
                listener.exitThemangai(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitThemangai" ):
                return visitor.visitThemangai(self)
            else:
                return visitor.visitChildren(self)




    def themangai(self):

        localctx = VenbaParser.ThemangaiContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_themangai)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.thema()
            self.state = 92
            self.ner_asai()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ThemanganiContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def thema(self):
            return self.getTypedRuleContext(VenbaParser.ThemaContext,0)


        def nirai_asai(self):
            return self.getTypedRuleContext(VenbaParser.Nirai_asaiContext,0)


        def getRuleIndex(self):
            return VenbaParser.RULE_themangani

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterThemangani" ):
                listener.enterThemangani(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitThemangani" ):
                listener.exitThemangani(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitThemangani" ):
                return visitor.visitThemangani(self)
            else:
                return visitor.visitChildren(self)




    def themangani(self):

        localctx = VenbaParser.ThemanganiContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_themangani)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.thema()
            self.state = 95
            self.nirai_asai()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PulimangaiContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def pulima(self):
            return self.getTypedRuleContext(VenbaParser.PulimaContext,0)


        def ner_asai(self):
            return self.getTypedRuleContext(VenbaParser.Ner_asaiContext,0)


        def getRuleIndex(self):
            return VenbaParser.RULE_pulimangai

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPulimangai" ):
                listener.enterPulimangai(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPulimangai" ):
                listener.exitPulimangai(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPulimangai" ):
                return visitor.visitPulimangai(self)
            else:
                return visitor.visitChildren(self)




    def pulimangai(self):

        localctx = VenbaParser.PulimangaiContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_pulimangai)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.pulima()
            self.state = 98
            self.ner_asai()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PulimanganiContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def pulima(self):
            return self.getTypedRuleContext(VenbaParser.PulimaContext,0)


        def nirai_asai(self):
            return self.getTypedRuleContext(VenbaParser.Nirai_asaiContext,0)


        def getRuleIndex(self):
            return VenbaParser.RULE_pulimangani

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPulimangani" ):
                listener.enterPulimangani(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPulimangani" ):
                listener.exitPulimangani(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPulimangani" ):
                return visitor.visitPulimangani(self)
            else:
                return visitor.visitChildren(self)




    def pulimangani(self):

        localctx = VenbaParser.PulimanganiContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_pulimangani)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.pulima()
            self.state = 101
            self.nirai_asai()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class KoovilangaiContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def koovilam(self):
            return self.getTypedRuleContext(VenbaParser.KoovilamContext,0)


        def ner_asai(self):
            return self.getTypedRuleContext(VenbaParser.Ner_asaiContext,0)


        def getRuleIndex(self):
            return VenbaParser.RULE_koovilangai

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterKoovilangai" ):
                listener.enterKoovilangai(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitKoovilangai" ):
                listener.exitKoovilangai(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitKoovilangai" ):
                return visitor.visitKoovilangai(self)
            else:
                return visitor.visitChildren(self)




    def koovilangai(self):

        localctx = VenbaParser.KoovilangaiContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_koovilangai)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.koovilam()
            self.state = 104
            self.ner_asai()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class KoovilanganiContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def koovilam(self):
            return self.getTypedRuleContext(VenbaParser.KoovilamContext,0)


        def nirai_asai(self):
            return self.getTypedRuleContext(VenbaParser.Nirai_asaiContext,0)


        def getRuleIndex(self):
            return VenbaParser.RULE_koovilangani

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterKoovilangani" ):
                listener.enterKoovilangani(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitKoovilangani" ):
                listener.exitKoovilangani(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitKoovilangani" ):
                return visitor.visitKoovilangani(self)
            else:
                return visitor.visitChildren(self)




    def koovilangani(self):

        localctx = VenbaParser.KoovilanganiContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_koovilangani)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.koovilam()
            self.state = 107
            self.nirai_asai()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class KaruvilangaiContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def karuvilam(self):
            return self.getTypedRuleContext(VenbaParser.KaruvilamContext,0)


        def ner_asai(self):
            return self.getTypedRuleContext(VenbaParser.Ner_asaiContext,0)


        def getRuleIndex(self):
            return VenbaParser.RULE_karuvilangai

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterKaruvilangai" ):
                listener.enterKaruvilangai(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitKaruvilangai" ):
                listener.exitKaruvilangai(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitKaruvilangai" ):
                return visitor.visitKaruvilangai(self)
            else:
                return visitor.visitChildren(self)




    def karuvilangai(self):

        localctx = VenbaParser.KaruvilangaiContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_karuvilangai)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.karuvilam()
            self.state = 110
            self.ner_asai()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class KaruvilanganiContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def karuvilam(self):
            return self.getTypedRuleContext(VenbaParser.KaruvilamContext,0)


        def nirai_asai(self):
            return self.getTypedRuleContext(VenbaParser.Nirai_asaiContext,0)


        def getRuleIndex(self):
            return VenbaParser.RULE_karuvilangani

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterKaruvilangani" ):
                listener.enterKaruvilangani(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitKaruvilangani" ):
                listener.exitKaruvilangani(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitKaruvilangani" ):
                return visitor.visitKaruvilangani(self)
            else:
                return visitor.visitChildren(self)




    def karuvilangani(self):

        localctx = VenbaParser.KaruvilanganiContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_karuvilangani)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.karuvilam()
            self.state = 113
            self.nirai_asai()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ThemaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ner_asai(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VenbaParser.Ner_asaiContext)
            else:
                return self.getTypedRuleContext(VenbaParser.Ner_asaiContext,i)


        def getRuleIndex(self):
            return VenbaParser.RULE_thema

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterThema" ):
                listener.enterThema(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitThema" ):
                listener.exitThema(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitThema" ):
                return visitor.visitThema(self)
            else:
                return visitor.visitChildren(self)




    def thema(self):

        localctx = VenbaParser.ThemaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_thema)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.ner_asai()
            self.state = 116
            self.ner_asai()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PulimaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def nirai_asai(self):
            return self.getTypedRuleContext(VenbaParser.Nirai_asaiContext,0)


        def ner_asai(self):
            return self.getTypedRuleContext(VenbaParser.Ner_asaiContext,0)


        def getRuleIndex(self):
            return VenbaParser.RULE_pulima
